benchmarks/cloudsuite/data-analytics/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsuite-data-analytics-master-service
spec:
  selector:
    app: cloudsuite-data-analytics-master
  ports:
    - name: http
      protocol: TCP
      port: 50070
      nodePort: 50070
    - name: https
      protocol: TCP
      port: 50470
      nodePort: 50470

  type: NodePort
